v2.2.0 release (#208)
* Updated urls in documentation to use HTTPS wherever possible

* Updated forum links to use HTTPS protocol

* Repaired intermittent unit test failures due to random values

* Repaired Travis CI build's broken link to Apache ANT binary

* Corrected SurfaceText handling of cached extent. Fixes and closes #28.

* Modified the ANT build to correctly assemble the release JAR files. Fixes #87.

* README adjustments for new continuous integration

- Simplified the opening paragraph and combined it with the Get Started section. Removed unnecessary GitHub issues link.

- Updated the Releases and Roadmap section to reflect the new continuous integration structure.

- Removed Daily Builds section, as daily builds have been shut down. Daily builds are expected to be replaced with a simple snapshot link in the Download section.

- Removed API documentation links to decouple the website structure from the README file.

* Travis CI adjustments for new continuous integration

- Removed daily builds, which are scheduled to be replaced by Maven SNAPSHOT artifacts

- Removed Javadoc publication to the World Wind website, which is now handled independently by the website itself

- Modularized the change log script for interoperability with other World Wind repositories

- Simplified Travis CI deployment tasks to reduce redundancy

* Travis CI adjustments

- Updated Travis CI to notify the World Wind team mailing list on every build

* Corrected copy and paste typos in Travis CI configuration

* Travis CI adjustments

- Adjusted changelog.sh for TRAVIS build environment

- Removed obsolete keystore and its decryption commands

* Removed unnecessary entry from .gitignore

* Restored default Travis CI notifications (#118)

- Removed the custom notifications block from .travis.yml
- Notifying everyone on every build is now unnecessary, as GitHub protected branches and mandatory pull requests ensure that only successful