@@ -1,7 +1,29 @@
 /*
- * Copyright (C) 2012 United States Government as represented by the Administrator of the
- * National Aeronautics and Space Administration.
- * All Rights Reserved.
+ * Copyright 2006-2009, 2017, 2020 United States Government, as represented by the
+ * Administrator of the National Aeronautics and Space Administration.
+ * All rights reserved.
+ * 
+ * The NASA World Wind Java (WWJ) platform is licensed under the Apache License,
+ * Version 2.0 (the "License"); you may not use this file except in compliance
+ * with the License. You may obtain a copy of the License at
+ * http://www.apache.org/licenses/LICENSE-2.0
+ * 
+ * Unless required by applicable law or agreed to in writing, software distributed
+ * under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
+ * CONDITIONS OF ANY KIND, either express or implied. See the License for the
+ * specific language governing permissions and limitations under the License.
+ * 
+ * NASA World Wind Java (WWJ) also contains the following 3rd party Open Source
+ * software:
+ * 
+ *     Jackson Parser – Licensed under Apache 2.0
+ *     GDAL – Licensed under MIT
+ *     JOGL – Licensed under  Berkeley Software Distribution (BSD)
+ *     Gluegen – Licensed under Berkeley Software Distribution (BSD)
+ * 
+ * A complete listing of 3rd Party software notices and licenses included in
+ * NASA World Wind Java (WWJ)  can be found in the WorldWindJava-v2.2 3rd-party
+ * notices and licenses PDF found in code directory.
  */
 
 package gov.nasa.worldwind;
@@ -14,7 +36,7 @@ import gov.nasa.worldwind.retrieve.RetrievalService;
 import gov.nasa.worldwind.util.*;
 
 import javax.imageio.spi.IIORegistry;
-import javax.media.opengl.GL;
+import com.jogamp.opengl.GL;
 import java.beans.PropertyChangeListener;
 import java.util.logging.Level;
 
@@ -94,16 +116,16 @@ public final class WorldWind
     }
 
     /**
-     * Reinitialize World Wind to its initial ready state. Shut down and restart all World Wind services and clear all
-     * World Wind memory caches. Cache memory will be released at the next JVM garbage collection.
-     * <p/>
-     * Call this method to reduce World Wind's current resource usage to its initial, empty state.
-     * <p/>
+     * Reinitialize WorldWind to its initial ready state. Shut down and restart all WorldWind services and clear all
+     * WorldWind memory caches. Cache memory will be released at the next JVM garbage collection.
+     * <p>
+     * Call this method to reduce WorldWind's current resource usage to its initial, empty state.
+     * <p>
      * The state of any open {@link WorldWindow} objects is indeterminate subsequent to invocation of this method. The
      * core WorldWindow objects attempt to shut themselves down cleanly during the call, but their resulting window
      * state is undefined.
-     * <p/>
-     * World Wind can continue to be used after calling this method.
+     * <p>
+     * WorldWind can continue to be used after calling this method.
      */
     public static synchronized void shutDown()
     {
@@ -169,9 +191,9 @@ public final class WorldWind
     }
 
     /**
-     * Indicates whether World Wind will attempt to connect to the network to retrieve data or for other reasons.
+     * Indicates whether WorldWind will attempt to connect to the network to retrieve data or for other reasons.
      *
-     * @return <code>true</code> if World Wind is in off-line mode, <code>false</code> if not.
+     * @return <code>true</code> if WorldWind is in off-line mode, <code>false</code> if not.
      *
      * @see NetworkStatus
      */
@@ -181,10 +203,10 @@ public final class WorldWind
     }
 
     /**
-     * Indicate whether World Wind should attempt to connect to the network to retrieve data or for other reasons. The
+     * Indicate whether WorldWind should attempt to connect to the network to retrieve data or for other reasons. The
      * default value for this attribute is <code>false</code>, indicating that the network should be used.
      *
-     * @param offlineMode <code>true</code> if World Wind should use the network, <code>false</code> otherwise
+     * @param offlineMode <code>true</code> if WorldWind should use the network, <code>false</code> otherwise
      *
      * @see NetworkStatus
      */
@@ -211,8 +233,8 @@ public final class WorldWind
 
         try
         {
-            Class c = Class.forName(className.trim());
-            return c.newInstance();
+            Class<?> c = Class.forName(className.trim());
+            return c.getConstructor().newInstance();
         }
         catch (Exception e)
         {
@@ -232,7 +254,7 @@ public final class WorldWind
      * @return the new component
      *
      * @throws IllegalStateException    if no name could be found which corresponds to <code>classNameKey</code>
-     * @throws IllegalArgumentException if <code>classNameKey<code> is null
+     * @throws IllegalArgumentException if <code>classNameKey</code> is null
      * @throws WWRuntimeException       if the component could not be created
      */
     public static Object createConfigurationComponent(String classNameKey)
